--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         width: 100%;
       }
       .footer {
-        background-color: lightgoldenrodyellow;
+        background-color: lightpink;
         width: 100%;
       }
       .header .text,
