--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="initial-scale=1.0" />
     <style>
       body {
         color: #555555;
@@ -43,15 +44,9 @@
         padding: 2rem;
       }
 
-      @media screen and (max-width: 640px) {
+      @media only screen and (max-width: 600px) {
         .container {
           display: block;
-        }
-        .content {
-          order: 2;
-        }
-        .menu {
-          order: 1;
         }
       }
     </style>
@@ -62,8 +57,8 @@
         <div class="text">HEADER</div>
       </div>
       <div class="container">
-        <div class="content col">
-          <h4>Content</h4>
+        <div class="menu col">
+          <h4>Menu</h4>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -72,8 +67,8 @@
           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
           culpa qui officia deserunt mollit anim id est laborum.
         </div>
-        <div class="menu col">
-          <h4>Menu</h4>
+        <div class="content col">
+          <h4>Content</h4>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam, quis nostrud exercitation ullamco laboris nisi ut
